# OpenGL-Boilerplate

./: .gitignore  CMakeLists.txt
src/: Mode.hpp
